2019-03-25  Andreas K. Hüttel  <dilfridge@gentoo.org>

	* nss/tst-nss-files-alias-leak.c (do_test): add missing opening
	quote in printf.

2019-03-25  Mike Crowe  <mac@mcrowe.com>

	* nptl/tst-rwlock14.c (do_test): Replace duplicate calls to
	pthread_rwlock_timedrdlock with calls to
	pthread_rwlock_timedwrlock to ensure that the latter is tested
	too. Use new function name in diagnostic messages too.

	* nptl/tst-sem5.c: Remove unused headers. Add <support/check.h>.
	(do_test) Use libsupport test macros rather than hand-coded
	conditionals and error messages. Ensure that sem_init returns zero
	rather than not -1. Use <support/test-driver.c> rather than
	test-skeleton.c.

	* nptl/tst-sem13.c: Add <support/check.h>. (do_test) Use libsupport
	test macros rather than hand-coded conditionals and error messages.
	Use <support/test-driver.c> rather than test-skeleton.c.

2019-03-25  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/gnu/netinet/udp.h (UDP_GRO): New macro.

	* elf/elf.h (NT_ARM_PAC_MASK): New macro.
	(NT_MIPS_MSA): Likewise.

2019-03-22  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* benchtests/Makefile (USE_CLOCK_GETTIME) Remove.
	* benchtests/README: Update description.
	* benchtests/bench-timing.h: Default to hp-timing.
	* sysdeps/generic/hp-timing.h (HP_TIMING_DIFF, HP_TIMING_ACCUM_NT,
	HP_TIMING_PRINT): Remove.
	(HP_TIMING_NOW): Add generic implementation.
	(hp_timing_t): Change to uint64_t.

	* benchtests/bench-timing.h: Replace HP_TIMING_AVAIL with
	HP_TIMING_INLINE.
	* nptl/descr.h: Likewise.
	* elf/rtld.c (RLTD_TIMING_DECLARE, RTLD_TIMING_NOW, RTLD_TIMING_DIFF,
	RTLD_TIMING_ACCUM_NT, RTLD_TIMING_SET): Define.
	(dl_start_final_info, _dl_start_final, dl_main, print_statistics):
	Abstract hp-timing usage with RTLD_* macros.
	* sysdeps/alpha/hp-timing.h (HP_TIMING_INLINE): Define iff IS_IN(rtld).
	(HP_TIMING_AVAIL, HP_SMALL_TIMING_AVAIL): Remove.
	* sysdeps/generic/hp-timing.h (HP_TIMING_AVAIL, HP_SMALL_TIMING_AVAIL,